# cyber-shield

./: README.md  __main__.py  config.py  cybershield.py  main.py  pyproject.toml  requirements.txt  setup.py
cli/: commands.py
data/: cve_patterns.json  malware_signatures.json
gui/: app.py  qr_dialog.py
gui/pages/: cleanup_page.py  dashboard_page.py  hardening_page.py  report_page.py  scan_page.py
modules/: consent.py  consent_server.py  file_cleaner.py  hardener.py  network_scanner.py  reporter.py  vuln_scanner.py
styles/: theme.qss
